@@ -11,8 +11,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
 
 @Slf4j
 @Component
@@ -63,6 +61,6 @@ public class FinnGjenglemteJournalposterService {
 
 		return new ArrayList<>(ubehandledeJournalpostList.stream()
 				.filter(ubehandletJournalpost -> !journalposterMedOppgaver.contains(Long.toString(ubehandletJournalpost.getJournalpostId())))
-				.collect(Collectors.toList()));
+				.toList());
 	}
 }
